--- a/PreEntrega2+Camusso/css/styles.css
+++ b/PreEntrega2+Camusso/css/styles.css
@@ -13,23 +13,13 @@ header {
     background: rgb(184, 91, 122);
 }
 
+
+
 .menu {
-   
-    margin: 50px 50px;
-    padding: 50px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
 
-.logo-principal {
-    margin: 50px;
-    width: 10%;
-}
-
-.menu {
-    display: flex;
-    justify-content: center;
     padding: 20px;
     margin: 20px;
 }
@@ -42,7 +32,7 @@ header {
    
     width: 100%;
     font-size: larger;
-   
+   font-weight: bold ;
     color: beige;
 }
 
@@ -55,7 +45,22 @@ header {
     margin: 20px;
 }
 
- 
+.main {
+    display: grid;
+    height: 60vh;
+    
+    grid-template-columns: 1fr 1fr;
+    
+}
+
+.parrafo-inicio  {
+    margin: 200px;
+}
+
+.imagen-inicio {
+    width: 600px;
+    margin-top: 200px;
+}
 
 
 /* mediaquieries de tablet */
